tests/ShouldFail/bad_end_proof.8pus
Theorem easyimpl1 : A -> A.
Proof.
    intro x.
    trivial.
Qed.
Theorem easyimpl2 : A -> A.
Proof.
    intro x.
Qed.